...
        android:id="@+id/guide_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toggleButton"
        android:layout_above="@+id/createButton">

    </ScrollView>

    <Button
        android:text="Create New Guide"
        android:layout_width="wrap_content"
...
